objects/OrderProcessingListView__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to configure Quotes tab dynamically</description>
    <fields>
        <fullName>ListView_FieldSet_Name__c</fullName>
        <description>The name of a pre-configured fieldset containing the fields to be displayed</description>
        <label>ListView FieldSet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListView_Query2__c</fullName>
        <description>WHERE Clause used to retrieve the appropriate records based on selected List View(SFD-959)</description>
        <label>ListView Query2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ListView_Query3__c</fullName>
        <label>ListView Query3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ListView_Query4__c</fullName>
        <label>ListView Query4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Created for setting Accept Quote as default list view by clicking on Quote tab</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>[SFD516]
Modifications to the custom Quote List Views for LatAm Order Processing
Currently used for Brazil and S Latam Accept Quotes.</description>
        <label>Sales Org</label>
        <type>TextArea</type>
    </fields>
    <label>OrderProcessingListView</label>
</CustomObject>